--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,9 +7,13 @@
 
 }
 
-.Header_logo {
-}
+.Header_list {
 
-.Header_avatar {
+  li {
+    margin-left: 10px;
 
+    &:hover {
+      color: #5418c5;
+    }
+  }
 }
