--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 
+
 .Header {
   transition-timing-function: ease-in;
   transition: all 0.5s;
@@ -7,6 +8,17 @@
   h1 {
     font-family: 'Permanent Marker', cursive;
   }
+
+  @media screen and (max-width: 600px) {
+    .Links {
+      display: none;
+    }
+    .Menu {
+      display: block;
+    }
+  }
+
+
 }
 
 
@@ -20,3 +32,8 @@
     }
   }
 }
+
+.Menu {
+  display: none;
+}
+
