--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -7,12 +7,10 @@
 .Banner_contain {
   background-position: center top;
   height: 80vh;
-  @media screen and (max-width: 750px) {
+  @media screen and (max-width: 600px) {
     height: 70vh;
   }
-  @media screen and (max-width: 500px) {
-    height: 60vh;
-  }
+
 
 }
 
@@ -38,18 +36,80 @@
           rgba(13, 3, 24, 1));
 }
 
-.Banner_Slide_Content {
-  width: calc(100% - 60px);
+.Banner_Slide{
+  height: 100%;
+  @media  screen and (max-width: 600px){
+    flex-direction: column;
+    justify-content: space-between;
+
+    .Banner_content_Left {
+      justify-content: flex-end;
+      width: 100%;
+      height: 90%;
+      text-align: center;
+      align-items: center;
+      padding-bottom: 20px;
+      p{
+        display: none;
+      }
+    }
+    .Banner_content_Right{
+      width: 100%;
+      height: 10%;
+      justify-content: center;
+      div{
+        justify-content: center;
+      }
+    }
+  }
+
+    .Banner_content_Left {
+  }
+
+  .Banner_content_Right {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin-top: 10px;
+    button{
+      border-radius: 50%;
+      border: solid #2a1537 1px;
+      width: 50px;
+      height: 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 0{
+        left: 10px;
+        right: 2px;
+      };
+      .NavigateIcons{
+        width: 30px;
+        height: 30px;
+      }
+    }
+
+  }
 }
+
 
 .Banner_Slide_Head {
   font-family: 'Raleway', sans-serif;
   word-break: break-word;
   text-transform: uppercase;
+  max-width: 50vw;
+  @media screen and (max-width: 1000px) {
+    font-size: 4rem;
+  }
+  @media screen and (max-width: 600px) {
+    font-size: 3.5rem;
+    max-width: 100%;
+  }
 
 }
 
 .Banner_Slide_Play {
+  max-width: 200px;
   transition: all 300ms ease-in-out;
   background: linear-gradient(to right, #8f6caa, #5418c5);
 
